--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ name = "prhub"
 crate-type = ["cdylib"]
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+octocrab = { version = "0.49", features = ["rustls"] }
+tokio = { version = "1", features = ["full"] }
 abi_stable = "0.11.1"
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
-serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 steel-core = { version = "0.7.0", features = ["dylibs", "sync"] }
 steel-derive = { version = "0.6.0" }
